<resources>
    <string name="app_name">Weather</string>
    <string name="app_text">Weather widget</string>
    <string name="title_activity_main">More details</string>
    <string name="action_settings">Settings</string>
    <string name="conf_country">Country: </string>
    <string name="conf_city_hint">Choose from the options below to specify the city</string>
    <string name="conf_city_name">City Name: </string>
    <string name="conf_city_id">City ID: </string>
    <string name="conf_city_long">Longitude: </string>
    <string name="conf_city_lat">Latitude: </string>
    <string name="conf_unit">Unit system</string>
    <string name="conf_unit_metric">Metric</string>
    <string name="conf_unit_imperial">Imperial</string>
    <string name="conf_button_save">Save settings</string>
    <string name="ex_temperature">Temperature</string>
    <string name="ex_wind_speed">Wind Speed</string>
    <string name="ex_humidity">Humidity</string>
    <string name="ex_sunrise">Sunrise</string>
    <string name="ex_sunset">Sunset</string>
    <string name="ex_longtitude">Longtitude</string>
    <string name="ex_latitude">Latitude</string>
    <string name="ex_condition">Condition</string>
    <string name="ex_description">Description</string>
    <string name="ex_pressure">Pressure</string>
    <string name="ex_temp_min">Minimal temperature</string>
    <string name="ex_temp_max">Maximal temperature</string>
    <string name="ex_wind_degree">Wind degree</string>
    <string name="ex_cloud_percentage">Cloud percentage</string>
    <string name="ex_citycode">Weather code</string>
    <string name="pascal">hPa</string>
    <string name="windsuffix">m/s</string>
    <string-array name="countries">
        <item>Ascension Island</item>
        <item>Andorra</item>
        <item>United Arab Emirates</item>
        <item>Afghanistan</item>
        <item>Antigua and Barbuda</item>
        <item>Anguilla</item>
        <item>Albania</item>
        <item>Armenia</item>
        <item>Netherlands Antilles</item>
        <item>Angola</item>
        <item>Antarctica</item>
        <item>Argentina</item>
        <item>American Samoa</item>
        <item>Austria</item>
        <item>Australia</item>
        <item>Aruba</item>
        <item>Åland Islands</item>
        <item>Azerbaijan</item>
        <item>Bosnia and Herzegovina</item>
        <item>Barbados</item>
        <item>Bangladesh</item>
        <item>Belgium</item>
        <item>Burkina Faso</item>
        <item>Bulgaria</item>
        <item>Bahrain</item>
        <item>Burundi</item>
        <item>Benin</item>
        <item>Saint Barthélemy</item>
        <item>Bermuda</item>
        <item>Brunei</item>
        <item>Bolivia</item>
        <item>Caribbean Netherlands</item>
        <item>Brazil</item>
        <item>Bahamas</item>
        <item>Bhutan</item>
        <item>Bouvet Island</item>
        <item>Botswana</item>
        <item>Belarus</item>
        <item>Belize</item>
        <item>Canada</item>
        <item>Cocos [Keeling] Islands</item>
        <item>Congo [DRC]</item>
        <item>Central African Republic</item>
        <item>Congo [Republic]</item>
        <item>Switzerland</item>
        <item>Côte d’Ivoire</item>
        <item>Cook Islands</item>
        <item>Chile</item>
        <item>Cameroon</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Clipperton Island</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Cape Verde</item>
        <item>Curaçao</item>
        <item>Christmas Island</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Germany</item>
        <item>Diego Garcia</item>
        <item>Djibouti</item>
        <item>Denmark</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Algeria</item>"
        <item>Ceuta and Melilla</item>
        <item>Ecuador</item>
        <item>Estonia</item>
        <item>Egypt</item>
        <item>Western Sahara</item>
        <item>Eritrea</item>
        <item>Spain</item>
        <item>Ethiopia</item>
        <item>European Union</item>
        <item>Finland</item>
        <item>Fiji</item>
        <item>Falkland Islands</item>
        <item>Micronesia</item>
        <item>Faroe Islands</item>
        <item>France</item>
        <item>Gabon</item>
        <item>United Kingdom</item>
        <item>Grenada</item>
        <item>Georgia</item>
        <item>French Guiana</item>
        <item>Guernsey</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greenland</item>
        <item>Gambia</item>
        <item>Guinea</item>
        <item>Guadeloupe</item>
        <item>Equatorial Guinea</item>
        <item>Greece</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>Guatemala</item>
        <item>Guam</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Hong Kong SAR China</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Honduras</item>
        <item>Croatia</item>
        <item>Haiti</item>
        <item>Hungary</item>
        <item>Canary Islands</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Isle of Man</item>
        <item>India</item>
        <item>British Indian Ocean Territory</item>
        <item>Iraq</item>
        <item>Iran</item>
        <item>Iceland</item>
        <item>Italy</item>
        <item>Jersey</item>
        <item>Jamaica</item>
        <item>Jordan</item>
        <item>Japan</item>
        <item>Kenya</item>
        <item>Kyrgyzstan</item>
        <item>Cambodia</item>
        <item>Kiribati</item>
        <item>Comoros</item>
        <item>Saint Kitts and Nevis</item>
        <item>North Korea</item>
        <item>South Korea</item>
        <item>Kuwait</item>
        <item>Cayman Islands</item>
        <item>Kazakhstan</item>
        <item>Laos</item>
        <item>Lebanon</item>
        <item>Saint Lucia</item>
        <item>Liechtenstein</item>
        <item>Sri Lanka</item>
        <item>Liberia</item>
        <item>Lesotho</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Latvia</item>
        <item>Libya</item>
        <item>Morocco</item>
        <item>Monaco</item>
        <item>Moldova</item>
        <item>Montenegro</item>
        <item>Saint Martin</item>
        <item>Madagascar</item>
        <item>Marshall Islands</item>
        <item>Macedonia</item>
        <item>Mali</item>
        <item>Myanmar [Burma]</item>
        <item>Mongolia</item>
        <item>Macau SAR China</item>
        <item>Northern Mariana Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Montserrat</item>
        <item>Malta</item>
        <item>Mauritius</item>
        <item>Maldives</item>
        <item>Malawi</item>
        <item>Mexico</item>
        <item>Malaysia</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>New Caledonia</item>
        <item>Niger</item>
        <item>Norfolk Island</item>
        <item>Nigeria</item>
        <item>Nicaragua</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Nepal</item>
        <item>Nauru</item>
        <item>Niue</item>
        <item>New Zealand</item>
        <item>Oman</item>
        <item>Panama</item>
        <item>Peru</item>
        <item>French Polynesia</item>
        <item>Papua New Guinea</item>
        <item>Philippines</item>
        <item>Pakistan</item>
        <item>Poland</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Pitcairn Islands</item>
        <item>Puerto Rico</item>
        <item>Palestinian Territories</item>
        <item>Portugal</item>
        <item>Palau</item>
        <item>Paraguay</item>
        <item>Qatar</item>
        <item>Outlying Oceania</item>
        <item>Réunion</item>
        <item>Romania</item>
        <item>Serbia</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saudi Arabia</item>
        <item>Solomon Islands</item>
        <item>Seychelles</item>
        <item>Sudan</item>
        <item>Sweden</item>
        <item>Saint Helena</item>
        <item>Singapore</item>
        <item>Slovenia</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Slovakia</item>
        <item>Sierra Leone</item>
        <item>San Marino</item>
        <item>Senegal</item>
        <item>Somalia</item>
        <item>Suriname</item>
        <item>South Sudan</item>
        <item>São Tomé and Príncipe</item>
        <item>El Salvador</item>
        <item>Sint Maarten</item>
        <item>Syria</item>
        <item>Swaziland</item>
        <item>Tristan da Cunha</item>
        <item>Turks and Caicos Islands</item>
        <item>Chad</item>
        <item>French Southern Territories</item>
        <item>Togo</item>
        <item>Thailand</item>
        <item>Tajikistan</item>
        <item>Tokelau</item>
        <item>East Timor</item>
        <item>Turkmenistan</item>
        <item>Tunisia</item>
        <item>Tonga</item>
        <item>Turkey</item>
        <item>Trinidad and Tobago</item>
        <item>Tuvalu</item>
        <item>Taiwan</item>
        <item>Tanzania</item>
        <item>Ukraine</item>
        <item>Uganda</item>
        <item>U.S. Outlying Islands</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vatican City</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Venezuela</item>
        <item>British Virgin Islands</item>
        <item>U.S. Virgin Islands</item>
        <item>Vietnam</item>
        <item>Vanuatu</item>
        <item>Wallis and Futuna</item>
        <item>Samoa</item>
        <item>Yemen</item>
        <item>Mayotte</item>
        <item>South Africa</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
        <item>Unknown Region</item>
    </string-array>
</resources>